--- a/StockPicker/Views/StockPick/Index.cshtml
+++ b/StockPicker/Views/StockPick/Index.cshtml
@@ -15,7 +15,7 @@
     {
         @foreach (var stockPick in Model.StockPicks)
         {
-            <div>@stockPick</div>
+            <div><span style="font-size: 20px">@stockPick</span> - <a asp-action="Delete" asp-route-symbol="@stockPick">Delete</a></div>
         }
     }
     <a href="@Url.Action("Create", "StockPick")">Add a stock pick</a>
