--- a/StockPicker/Views/StockPick/Create.cshtml
+++ b/StockPicker/Views/StockPick/Create.cshtml
@@ -8,9 +8,25 @@
   <h1 class="display-4">Create Stock Pick</h1>
   <hr />
   <form method="post" asp-action="Create">
-    <label asp-for="SymbolToTrack"></label>
-    <input asp-for="SymbolToTrack" /><br />
-    <span asp-validation-for="SymbolToTrack"></span><br />
-    <input type="submit" value="Create" class="btn btn-primary" />
+    <div class="form-group col-md-3">
+      <label asp-for="SymbolToTrack"></label>
+      <input asp-for="SymbolToTrack" class="form-control" placeholder="Enter symbol" />
+      <span asp-validation-for="SymbolToTrack"></span>
+    </div>
+
+    <div class="form-check col-md-3" style="margin-top: 10px">
+      <input type="checkbox" class="form-check-input" asp-for="NotifyOnAllPriceChanges" />
+      <label class="form-check-label" asp-for="NotifyOnAllPriceChanges"></label>
+    </div>
+
+    <div class="form-group col-md-3" style="margin-top: 10px">
+      <label asp-for="PriceChangePercentThreshold"></label>
+      <input asp-for="PriceChangePercentThreshold" class="form-control" placeholder="Enter threshold" />
+      <span asp-validation-for="PriceChangePercentThreshold"></span>
+    </div>
+
+    <div class="form-group col-md-3" style="margin-top: 10px">
+      <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
   </form>
 </div>
